2006-11-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Rewrite of the encoding bins.
	Added TODOs for next release.
	* pitivi/elements/Makefile.am:
	* pitivi/elements/smartscale.py:
	New SmartScale element for combining videoscale and videobox.
	* pitivi/objectfactory.py:
	More debug
	* pitivi/settings.py:
	Added more TODOS
	Added video pixel-aspect-ratio property
	Added methods to create audio/video craps from settings

2006-11-26  Edward Hervey  <edward@fluendo.com>

	* AUTHORS:
	Added contributors.
	* configure.ac:
	Bump gst core requirement to 0.10.8 for proper GstQueue behaviour
	* pitivi/discoverer.py:
	Handle gracefully more cases using no-more-pads information.
	Remove hack for GstQueue mis-behaviour in pre-0.10.8 GStreamer.
	Remove queues used when doing video thumbnailing (it only needs one
	frame anyway).
	Sprinkle a little more debug

2006-11-26  Laszlo Pandy <laszlok2@gmail.com>

	reviewed by: Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/actions.xml:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/sourcefactories.py:
	Added new option for recursively importing sources from folders.
	Don't automatically display the error dialog box, instead show a
	warning button which the user can click on. This makes the whole process
	less obstrusive.
	Added proper credits to About dialog box.

2006-09-29  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	Trying in vain to fix the way i18n works with both standard python i18n
	using gettext and glade/gtk.
	* po/el.po:
	* po/en_GB.po:
	* po/es.po:
	* po/fr.po:
	* po/sv.po:
	* po/zh_CN.po:
	Those have been borked for some time, they were using *.glade.h !!

2006-09-25  Edward Hervey  <edward@fluendo.com>

	Patch by: Christophe Sauthier <christophe.sauthier@gmail.com>
	
	* pitivi/check.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/settings.py:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/infolayer.py: